--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "prisma": "^6.1.0"
   }
 }
+
